# logview

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  test_log.txt
.github/workflows/: ci.yml  release.yml
docs/: development_plan.md  requirements.md
scripts/: bootstrap_third_party.sh  gen_large_test_file.py
src/: main.cpp
src/core/: bit_array.cpp  bit_array.h  config.cpp  config.h  filter_engine.cpp  filter_engine.h  filter_result.cpp  filter_result.h  line_index.cpp  line_index.h  mmap_file.cpp  mmap_file.h  path_util.cpp  path_util.h  rule.cpp  rule.h  rule_set.cpp  rule_set.h  types.h
src/gui/: main_gui.cpp  menu.cpp  menu.h
src/ui/: app_ui.cpp  app_ui.h  line_editor.cpp  line_editor.h  screen.cpp  screen.h
tests/: perf_filter_engine.cpp  perf_rules.txt  test_filter_engine.cpp  test_line_editor.cpp  test_pdcurses_gui.cpp
third_party_patches/: pdcursesmod-lv-no-swap.patch
